# fakellm-assert

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/fakellm_assert/: __init__.py  expect.py  extract.py  judge.py  pytest_plugin.py  store.py
tests/: test_fakellm_assert.py
