[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fakellm-assert"
version = "0.1.1"
description = "Deterministic semantic assertions for LLM tests. Freeze a judge's verdict once; replay it forever."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "fakellm" }]
keywords = ["llm", "testing", "assertions", "mock", "fakellm", "pytest", "llm-as-judge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/fakellm/fakellm-assert"
"Bug Tracker" = "https://github.com/fakellm/fakellm-assert/issues"

# Auto-activate the pytest plugin when installed.
[project.entry-points.pytest11]
fakellm_assert = "fakellm_assert.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/fakellm_assert"]
